removed fixed position for buttons and removed overflow scroll

--- a/public/css/beerify.css
+++ b/public/css/beerify.css
@@ -2,14 +2,20 @@ body {
 	font-family: 'Bitter', serif;
 	background: url("/images/beer.jpg"), no-repeat center center fixed;
 	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+ 	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
 }
 
 img {
 	z-index: 0;
 }
+
+html, body {
+	height: 100%;
+	width: 100%;
+}
+
 #container {
 	padding-bottom: 7%;
 	margin-top: 2%;
@@ -17,8 +23,6 @@ img {
 	border-radius: 10px;
 	background:rgba(255,255,255,0.75);
 	color: black;
-	height: 470px;
-	overflow: scroll;
 	/*box-shadow: 10px 10px 60px 10px white*/
 }
 
@@ -28,7 +32,6 @@ img {
 }
 
 #nav {
-	position: fixed;
 	float: left;
 	padding: 1%; 
 	z-index: 1;
